--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 db.sqlite3
+/db.sqlite3
 Untitled1.ps1
 # dependencies
 /node_modules
